[gd_scene load_steps=4 format=3 uid="uid://c2y4g0uyc7y1r"]

[ext_resource type="Script" path="res://Instances/Components/PlayerLife/LifeIcon.gd" id="1_yjg6j"]
[ext_resource type="Texture2D" uid="uid://0cdkwn6i56dx" path="res://Assets/life.png" id="2_f7akg"]

[sub_resource type="Curve" id="Curve_um6d0"]
max_value = 2.0
_data = [Vector2(0, 2), 0.0, 0.0, 0, 0, Vector2(0.429864, 1.10909), -9.13223, -9.13223, 0, 0, Vector2(0.493213, 0), -6.36212, -6.36212, 0, 0]
point_count = 3

[node name="LifeIcon" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(2, 2)
script = ExtResource("1_yjg6j")

[node name="ExplosionParticle" type="CPUParticles2D" parent="."]
modulate = Color(0.835294, 0, 0, 1)
position = Vector2(16, 16)
emitting = false
amount = 40
lifetime = 0.6
one_shot = true
explosiveness = 0.6
spread = 180.0
gravity = Vector2(0, 900)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 2.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_um6d0")

[node name="LifeImage" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
pivot_offset = Vector2(16, 16)
texture = ExtResource("2_f7akg")
